raylib_target = "msvc"

if (is_win && is_clang) {
    raylib_target = "mingw"
} else if (is_linux) {
    raylib_target = "linux"
}


exec_script("//utils/fetch_deps.py", [ raylib_target ])

config("raylib") {
    include_dirs = [
        "//third_party/raylib/include",
    ]

    lib_path = "//third_party/raylib/lib"

    if (is_win) {
        if (is_clang) {
            libs = [
                "$lib_path/libraylib.dll.a",
                "$lib_path/libraylib_static.a",
            ]
        } else {
            libs = [
                "$lib_path/raylib.lib",
                "$lib_path/raylib_static.lib",
            ]
        }
    }
}

if (is_win) {
    copy("raylibdll") {
        sources = [ "//third_party/raylib/bin/raylib.dll" ]
        outputs = [ "$root_out_dir/{{source_file_part}}" ]
    }
}


executable("andora") {
    sources = [
        "main.cc",
    ]

    configs += [
        ":raylib",
    ]
}